package com.youkeda.application.art.exam.model;

/**
 * TODO
 *
 * @author zr
 * @date 2020/3/19, 周四
 */
public enum Association {
    /**
     * 音乐协会
     */
    MUSIC,
    /**
     * 戏剧协会
     */
    DRAMA
}
