package com.youkeda.application.art.exam.model;

/**
 * TODO
 *
 * @author zr
 * @date 2020/3/19, 周四
 */
public enum ExamStage {
    /**
     * 通知打印准考证
     */
    NOTICED,

    /**
     * 发布成绩
     */
    RELEASE,

    /**
     * 上传缴费单
     */
    UPLOAD
}
